@@ -345,15 +345,89 @@ int16 Mob::GetClassLevelFactor(){
 
 sint32 Client::CalcBaseHP()
 {
-	int16 lm=GetClassLevelFactor();
-	int16 Post255;
-	if((GetSTA()-255)/2 > 0)
-		Post255 = (GetSTA()-255)/2;
-	else
-		Post255 = 0;
+	if(GetClientVersion() >= EQClientSoD && RuleB(Character, SoDClientUseSoDHPManaEnd)) {
+		float SoDPost255;
+		if(((GetSTA() - 255) / 2) > 0)
+			SoDPost255 = ((GetSTA() - 255) / 2);
+		else
+			SoDPost255 = 0;
+
+		int hp_factor = GetClassHPFactor();
 		
-	base_hp = (5)+(GetLevel()*lm/10) + (((GetSTA()-Post255)*GetLevel()*lm/3000)) + ((Post255*GetLevel())*lm/6000);
+		if (level < 41) {
+			base_hp = (5 + (GetLevel() * hp_factor / 12) + 
+				(float(GetSTA() - SoDPost255) * GetLevel() * hp_factor / 3600));
+		}
+		else if (level < 81) {
+			base_hp = (5 + (40 * hp_factor / 12) + ((GetLevel() - 40) * hp_factor / 6) + 
+				(float(GetSTA() - SoDPost255) * hp_factor / 90) + 
+				(float(GetSTA() - SoDPost255) * (GetLevel() - 40) * hp_factor / 1800));
+		}
+		else { 
+			base_hp = (5 + (80 * hp_factor / 8) + ((GetLevel() - 80) * hp_factor / 10) + 
+				(float(GetSTA() - SoDPost255) * hp_factor / 90) + 
+				(float(GetSTA() - SoDPost255) * hp_factor / 45));
+		}
+
+	}
+	else {
+		int16 Post255;
+		int16 lm=GetClassLevelFactor();
+		if((GetSTA()-255)/2 > 0)
+			Post255 = (GetSTA()-255)/2;
+		else
+			Post255 = 0;
+			
+		base_hp = (5)+(GetLevel()*lm/10) + (((GetSTA()-Post255)*GetLevel()*lm/3000)) + ((Post255*GetLevel())*lm/6000);
+	}
 	return base_hp;
+}
+
+// This is for calculating Base HPs + STA bonus for SoD or later clients.
+int32 Client::GetClassHPFactor() {
+
+	int factor;
+
+	// Note: Base HP factor under level 41 is equal to factor / 12, and from level 41 to 80 is factor / 6.
+	// Base HP over level 80 is factor / 10
+	// HP per STA point per level is factor / 30 for level 80+
+	// HP per STA under level 40 is the level 80 HP Per STA / 120, and for over 40 it is / 60.
+	
+	switch(GetClass())
+	{
+		case DRUID:
+		case ENCHANTER:
+		case NECROMANCER:
+		case MAGICIAN:
+		case WIZARD:
+			factor = 240;
+			break;
+		case BEASTLORD:
+		case BERSERKER:
+		case MONK:
+		case ROGUE:
+		case SHAMAN:
+			factor = 255;
+			break;
+		case BARD:
+		case CLERIC:
+			factor = 264;
+			break;
+		case SHADOWKNIGHT:
+		case PALADIN:
+			factor = 288;
+			break;
+		case RANGER:
+			factor = 276;
+			break;
+		case WARRIOR:
+			factor = 300;
+			break;
+		default:
+			factor = 240;
+			break;
+	}
+	return factor;
 }
 
 // This should return the combined AC of all the items the player is wearing.
